[tool.poetry]
name = "bank_app"
version = "0.1.0"
description = ""
authors = ["Nika Alexandrovna <megrelynika@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
poetry-core = "^2.1.3"
coverage = "^7.8.0"
iniconfig = "^2.1.0"
packaging = "^25.0"
pip = "^25.1.1"
pluggy = "^1.6.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
setuptools = "^80.7.1"
mypy = "^1.15.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"
poetry = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
